Update in line with PR #236

--- a/genindex.html
+++ b/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; Thetis 0+untagged.1662.ge27ddd4 documentation</title>
+    <title>Index &#8212; Thetis 0+untagged.1674.g37aab4c documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -189,6 +189,8 @@
         <li><a href="thetis.html#thetis.options.PacanowskiPhilanderModelOptions.alpha">(thetis.options.PacanowskiPhilanderModelOptions attribute)</a>
 </li>
       </ul></li>
+      <li><a href="thetis.html#thetis.utility.anisotropic_cell_size">anisotropic_cell_size() (in module thetis.utility)</a>
+</li>
       <li><a href="thetis.html#thetis.assembledschur.AssembledSchurPC.apply">apply() (thetis.assembledschur.AssembledSchurPC method)</a>
 
       <ul>
@@ -1177,8 +1179,6 @@
 </li>
       <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.get_sediment_timestepper">get_sediment_timestepper() (thetis.solver2d.FlowSolver2d method)</a>
 </li>
-      <li><a href="thetis.html#thetis.utility.get_sipg_ratio">get_sipg_ratio() (in module thetis.utility)</a>
-</li>
       <li><a href="thetis.html#thetis.interpolation.NetCDFTimeParser.get_start_time">get_start_time() (thetis.interpolation.NetCDFTimeParser method)</a>
 
       <ul>
@@ -1239,12 +1239,16 @@
         <li><a href="thetis.html#thetis.options.ModelOptions3d.horizontal_diffusivity">(thetis.options.ModelOptions3d attribute)</a>
 </li>
       </ul></li>
+      <li><a href="thetis.html#thetis.options.CommonModelOptions.horizontal_diffusivity_scale">horizontal_diffusivity_scale (thetis.options.CommonModelOptions attribute)</a>
+</li>
       <li><a href="thetis.html#thetis.options.CommonModelOptions.horizontal_velocity_scale">horizontal_velocity_scale (thetis.options.CommonModelOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.CommonModelOptions.horizontal_viscosity">horizontal_viscosity (thetis.options.CommonModelOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.CommonModelOptions.horizontal_viscosity_scale">horizontal_viscosity_scale (thetis.options.CommonModelOptions attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.momentum_eq.HorizontalAdvectionTerm">HorizontalAdvectionTerm (class in thetis.momentum_eq)</a>
 
       <ul>
@@ -1255,8 +1259,6 @@
         <li><a href="thetis.html#thetis.tracer_eq_2d.HorizontalAdvectionTerm">(class in thetis.tracer_eq_2d)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.tracer_eq.HorizontalDiffusionTerm">HorizontalDiffusionTerm (class in thetis.tracer_eq)</a>
 
       <ul>
@@ -2707,6 +2709,8 @@
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions2d.tracer_advective_velocity_factor">tracer_advective_velocity_factor (thetis.options.ModelOptions2d attribute)</a>
 </li>
+      <li><a href="thetis.html#thetis.options.ModelOptions2d.tracer_element_family">tracer_element_family (thetis.options.ModelOptions2d attribute)</a>
+</li>
       <li><a href="thetis.html#thetis.coupled_timeintegrator_2d.CoupledCrankEuler2D.tracer_integrator">tracer_integrator (thetis.coupled_timeintegrator_2d.CoupledCrankEuler2D attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.coupled_timeintegrator_2d.CoupledTimeIntegrator2D.tracer_integrator">tracer_integrator() (thetis.coupled_timeintegrator_2d.CoupledTimeIntegrator2D method)</a>
@@ -2848,6 +2852,8 @@
       <li><a href="thetis.html#thetis.options.SedimentModelOptions.use_slope_mag_correction">use_slope_mag_correction (thetis.options.SedimentModelOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions3d.use_smagorinsky_viscosity">use_smagorinsky_viscosity (thetis.options.ModelOptions3d attribute)</a>
+</li>
+      <li><a href="thetis.html#thetis.options.ModelOptions2d.use_supg_tracer">use_supg_tracer (thetis.options.ModelOptions2d attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions2d.use_tracer_conservative_form">use_tracer_conservative_form (thetis.options.ModelOptions2d attribute)</a>
 </li>
@@ -3009,7 +3015,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.4.
     </div>
   </body>
 </html>
