--- a/model_options_3d.html
+++ b/model_options_3d.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>3D model options &#8212; Thetis 0+untagged.1662.ge27ddd4 documentation</title>
+    <title>3D model options &#8212; Thetis 0+untagged.1674.g37aab4c documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -100,6 +100,12 @@ Prints deviation from the initial volume to stdout.</p>
 <dt>CommonModelOptions.<strong>horizontal_diffusivity</strong><span class="classifier">FiredrakeCoefficient</span></dt><dd><p>Horizontal diffusivity for tracers and sediment</p>
 <p>Default:</p>
 <p>Function</p>
+</dd>
+<dt>CommonModelOptions.<strong>horizontal_diffusivity_scale</strong><span class="classifier">FiredrakeConstantTraitlet</span></dt><dd><p>Maximum horizontal diffusivity</p>
+<p>Used to compute the mesh Peclet number in
+the 2D tracer SUPG stabilization scheme.</p>
+<p>Default:</p>
+<p>Constant(1.0)</p>
 </dd>
 <dt>CommonModelOptions.<strong>horizontal_velocity_scale</strong><span class="classifier">FiredrakeConstantTraitlet</span></dt><dd><p>Maximum horizontal velocity magnitude</p>
 <p>Used to compute max stable advection time step.</p>
@@ -649,7 +655,7 @@ pressure gradient is in the velocity space.</p>
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.4.
     </div>
   </body>
 </html>
