--- a/_modules/thetis/conservative_tracer_eq_2d.html
+++ b/_modules/thetis/conservative_tracer_eq_2d.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.conservative_tracer_eq_2d &#8212; Thetis 0+untagged.1662.ge27ddd4 documentation</title>
+    <title>thetis.conservative_tracer_eq_2d &#8212; Thetis 0+untagged.1675.g2c5c7fa documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -82,18 +82,13 @@
 <span class="sd">    Generic depth-integrated tracer term that provides commonly used members and mapping for</span>
 <span class="sd">    boundary functions.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span>
-                 <span class="n">use_lax_friedrichs</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
-                 <span class="n">sipg_factor</span><span class="o">=</span><span class="n">Constant</span><span class="p">(</span><span class="mf">1.0</span><span class="p">)):</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg function_space: :class:`FunctionSpace` where the solution belongs</span>
 <span class="sd">        :arg depth: :class: `DepthExpression` containing depth info</span>
-<span class="sd">        :kwarg bool use_lax_friedrichs: whether to use Lax Friedrichs stabilisation</span>
-<span class="sd">        :kwarg sipg_factor: :class:`Constant` or :class:`Function` SIPG penalty scaling factor</span>
+<span class="sd">        :arg options: :class`ModelOptions2d` containing parameters</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span>
-                         <span class="n">use_lax_friedrichs</span><span class="o">=</span><span class="n">use_lax_friedrichs</span><span class="p">,</span>
-                         <span class="n">sipg_factor</span><span class="o">=</span><span class="n">sipg_factor</span><span class="p">)</span>
+        <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">)</span>
 
     <span class="c1"># TODO: at the moment this is the same as TracerTerm, but we probably want to overload its</span>
     <span class="c1"># get_bnd_functions method</span>
@@ -142,7 +137,7 @@
             <span class="n">f</span> <span class="o">+=</span> <span class="p">(</span><span class="n">flux_up</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">*</span> <span class="n">jump</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">test</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">normal</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span>
                   <span class="o">+</span> <span class="n">flux_up</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">*</span> <span class="n">jump</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">test</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">normal</span><span class="p">[</span><span class="mi">1</span><span class="p">]))</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">dS</span>
             <span class="c1"># Lax-Friedrichs stabilization</span>
-            <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">use_lax_friedrichs</span><span class="p">:</span>
+            <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">options</span><span class="o">.</span><span class="n">use_lax_friedrichs_tracer</span><span class="p">:</span>
                 <span class="k">if</span> <span class="n">uv_p1</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
                     <span class="n">gamma</span> <span class="o">=</span> <span class="mf">0.5</span><span class="o">*</span><span class="nb">abs</span><span class="p">((</span><span class="n">avg</span><span class="p">(</span><span class="n">uv_p1</span><span class="p">)[</span><span class="mi">0</span><span class="p">]</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">normal</span><span class="p">(</span><span class="s1">&#39;-&#39;</span><span class="p">)[</span><span class="mi">0</span><span class="p">]</span>
                                      <span class="o">+</span> <span class="n">avg</span><span class="p">(</span><span class="n">uv_p1</span><span class="p">)[</span><span class="mi">1</span><span class="p">]</span><span class="o">*</span><span class="bp">self</span><span class="o">.</span><span class="n">normal</span><span class="p">(</span><span class="s1">&#39;-&#39;</span><span class="p">)[</span><span class="mi">1</span><span class="p">]))</span><span class="o">*</span><span class="n">lax_friedrichs_factor</span>
@@ -225,17 +220,14 @@
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    2D tracer advection-diffusion equation :eq:`tracer_eq` in conservative form</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span>
-                 <span class="n">use_lax_friedrichs</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
-                 <span class="n">sipg_factor</span><span class="o">=</span><span class="n">Constant</span><span class="p">(</span><span class="mf">1.0</span><span class="p">)):</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg function_space: :class:`FunctionSpace` where the solution belongs</span>
 <span class="sd">        :arg depth: :class: `DepthExpression` containing depth info</span>
-<span class="sd">        :kwarg bool use_lax_friedrichs: whether to use Lax Friedrichs stabilisation</span>
-<span class="sd">        :kwarg sipg_factor: :class:`Constant` or :class:`Function` SIPG penalty scaling factor</span>
+<span class="sd">        :arg options: :class`ModelOptions2d` containing parameters</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="nb">super</span><span class="p">(</span><span class="n">ConservativeTracerEquation2D</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">function_space</span><span class="p">)</span>
-        <span class="n">args</span> <span class="o">=</span> <span class="p">(</span><span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">use_lax_friedrichs</span><span class="p">,</span> <span class="n">sipg_factor</span><span class="p">)</span>
+        <span class="n">args</span> <span class="o">=</span> <span class="p">(</span><span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">add_term</span><span class="p">(</span><span class="n">ConservativeHorizontalAdvectionTerm</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">),</span> <span class="s1">&#39;explicit&#39;</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">add_term</span><span class="p">(</span><span class="n">ConservativeHorizontalDiffusionTerm</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">),</span> <span class="s1">&#39;explicit&#39;</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">add_term</span><span class="p">(</span><span class="n">ConservativeSourceTerm</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">),</span> <span class="s1">&#39;source&#39;</span><span class="p">)</span></div>
@@ -250,7 +242,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.4.
     </div>
   </body>
 </html>
