--- a/_modules/thetis/sediment_eq_2d.html
+++ b/_modules/thetis/sediment_eq_2d.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.sediment_eq_2d &#8212; Thetis 0+untagged.1662.ge27ddd4 documentation</title>
+    <title>thetis.sediment_eq_2d &#8212; Thetis 0+untagged.1675.g2c5c7fa documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -69,7 +69,6 @@
 <span class="sd">velocities, and :math:`\mu_h` denotes horizontal diffusivity.</span>
 <span class="sd">&quot;&quot;&quot;</span>
 <span class="kn">from</span> <span class="nn">__future__</span> <span class="kn">import</span> <span class="n">absolute_import</span>
-<span class="kn">from</span> <span class="nn">.utility</span> <span class="kn">import</span> <span class="o">*</span>
 <span class="kn">from</span> <span class="nn">.equation</span> <span class="kn">import</span> <span class="n">Equation</span>
 <span class="kn">from</span> <span class="nn">.tracer_eq_2d</span> <span class="kn">import</span> <span class="n">HorizontalDiffusionTerm</span><span class="p">,</span> <span class="n">HorizontalAdvectionTerm</span><span class="p">,</span> <span class="n">TracerTerm</span>
 <span class="kn">from</span> <span class="nn">.conservative_tracer_eq_2d</span> <span class="kn">import</span> <span class="n">ConservativeHorizontalAdvectionTerm</span>
@@ -88,16 +87,14 @@
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Generic sediment term that provides commonly used members.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">sediment_model</span><span class="p">,</span>
-                 <span class="n">use_lax_friedrichs</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">sipg_factor</span><span class="o">=</span><span class="n">Constant</span><span class="p">(</span><span class="mf">1.0</span><span class="p">),</span> <span class="n">conservative</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">,</span> <span class="n">sediment_model</span><span class="p">,</span> <span class="n">conservative</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg function_space: :class:`FunctionSpace` where the solution belongs</span>
 <span class="sd">        :arg depth: :class:`DepthExpression` containing depth info</span>
-<span class="sd">        :kwarg bool use_lax_friedrichs: whether to use Lax Friedrichs stabilisation</span>
-<span class="sd">        :kwarg sipg_factor: :class:`Constant` or :class:`Function` SIPG penalty scaling factor</span>
+<span class="sd">        :arg options: :class`ModelOptions2d` containing parameters</span>
 <span class="sd">        :kwarg bool conservative: whether to use conservative tracer</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="nb">super</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">)</span>
+        <span class="nb">super</span><span class="p">(</span><span class="n">SedimentTerm</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">sediment_model</span> <span class="o">=</span> <span class="n">sediment_model</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">conservative</span> <span class="o">=</span> <span class="n">conservative</span>
 
@@ -168,19 +165,15 @@
 <span class="sd">    2D sediment advection-diffusion equation: :eq:`tracer_eq_2d` or :eq:`conservative_tracer_eq_2d`</span>
 <span class="sd">    with sediment source and sink term</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">sediment_model</span><span class="p">,</span>
-                 <span class="n">use_lax_friedrichs</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
-                 <span class="n">sipg_factor</span><span class="o">=</span><span class="n">Constant</span><span class="p">(</span><span class="mf">1.0</span><span class="p">),</span>
-                 <span class="n">conservative</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
+    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">,</span> <span class="n">sediment_model</span><span class="p">,</span> <span class="n">conservative</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg function_space: :class:`FunctionSpace` where the solution belongs</span>
 <span class="sd">        :arg depth: :class:`DepthExpression` containing depth info</span>
-<span class="sd">        :kwarg bool use_lax_friedrichs: whether to use Lax Friedrichs stabilisation</span>
-<span class="sd">        :kwarg sipg_factor: :class:`Constant` or :class:`Function` SIPG penalty scaling factor</span>
+<span class="sd">        :arg options: :class`ModelOptions2d` containing parameters</span>
 <span class="sd">        :kwarg bool conservative: whether to use conservative tracer</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="nb">super</span><span class="p">(</span><span class="n">SedimentEquation2D</span><span class="p">,</span> <span class="bp">self</span><span class="p">)</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">function_space</span><span class="p">)</span>
-        <span class="n">args</span> <span class="o">=</span> <span class="p">(</span><span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">sediment_model</span><span class="p">,</span> <span class="n">use_lax_friedrichs</span><span class="p">,</span> <span class="n">sipg_factor</span><span class="p">,</span> <span class="n">conservative</span><span class="p">)</span>
+        <span class="n">args</span> <span class="o">=</span> <span class="p">(</span><span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">,</span> <span class="n">sediment_model</span><span class="p">,</span> <span class="n">conservative</span><span class="p">)</span>
         <span class="k">if</span> <span class="n">conservative</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">add_term</span><span class="p">(</span><span class="n">ConservativeSedimentAdvectionTerm</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">),</span> <span class="s1">&#39;explicit&#39;</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
@@ -199,7 +192,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2020, Tuomas Karna et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.4.
     </div>
   </body>
 </html>
