Update in line with PR #240

--- a/_modules/thetis/callback.html
+++ b/_modules/thetis/callback.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.callback &#8212; Thetis 0+untagged.1675.g2c5c7fa documentation</title>
+    <title>thetis.callback &#8212; Thetis 0+untagged.1676.g1d09a98 documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -608,7 +608,7 @@
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        :arg scalar_callback: Python function that returns a list of values of an objective functional.</span>
 <span class="sd">        :arg solver_obj: Thetis solver object</span>
-<span class="sd">        :arg **kwargs: any additional keyword arguments, see DiagnosticCallback</span>
+<span class="sd">        :arg kwargs: any additional keyword arguments, see DiagnosticCallback</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">kwargs</span><span class="o">.</span><span class="n">setdefault</span><span class="p">(</span><span class="s1">&#39;export_to_hdf5&#39;</span><span class="p">,</span> <span class="kc">False</span><span class="p">)</span>
         <span class="n">kwargs</span><span class="o">.</span><span class="n">setdefault</span><span class="p">(</span><span class="s1">&#39;append_to_log&#39;</span><span class="p">,</span> <span class="kc">False</span><span class="p">)</span>
