--- a/_modules/thetis/utility.html
+++ b/_modules/thetis/utility.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.utility &#8212; Thetis 0+untagged.1675.g2c5c7fa documentation</title>
+    <title>thetis.utility &#8212; Thetis 0+untagged.1676.g1d09a98 documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -1986,14 +1986,26 @@
 <span class="sd">    Construct expression for depth depending on options</span>
 
 <span class="sd">    If `not use_nonlinear_equations`, then the depth is simply the bathymetry:</span>
-<span class="sd">        :math:`H = h`</span>
+
+<span class="sd">  ..math::</span>
+<span class="sd">        H = h</span>
+
 <span class="sd">    Otherwise we include the free surface elevation:</span>
-<span class="sd">        :math:`H = h + \eta`</span>
+
+<span class="sd">  ..math::</span>
+<span class="sd">        H = h + \eta</span>
+
 <span class="sd">    and if `use_wetting_and_drying`, includes a bathymetry displacement term</span>
 <span class="sd">    to ensure a positive depth (see Karna et al. 2011):</span>
-<span class="sd">        :math:`H = h + f(h+\eta) + \eta`</span>
+
+<span class="sd">  ..math::</span>
+<span class="sd">        H = h + f(h+\eta) + \eta</span>
+
 <span class="sd">    where</span>
-<span class="sd">        :math:`f(h+\eta) = (\sqrt{(h+\eta)^2 +\alpha^2} - (h+\eta))/2`</span>
+
+<span class="sd">  ..math::</span>
+<span class="sd">        f(h+\eta) = (\sqrt{(h+\eta)^2 +\alpha^2} - (h+\eta))/2</span>
+
 <span class="sd">    This introduces a wetting-drying parameter :math:`\alpha`, with dimensions</span>
 <span class="sd">    of length. The value for :math:`\alpha` is specified by</span>
 <span class="sd">    :attr:`.ModelOptions.wetting_and_drying_alpha`, in units of meters. The</span>
