--- a/genindex.html
+++ b/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; Thetis 0+untagged.1675.g2c5c7fa documentation</title>
+    <title>Index &#8212; Thetis 0+untagged.1676.g1d09a98 documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -149,8 +149,20 @@
         <li><a href="thetis.html#thetis.shallowwater_eq.ModeSplit2DEquations.add_momentum_terms">(thetis.shallowwater_eq.ModeSplit2DEquations method)</a>
 </li>
       </ul></li>
+      <li><a href="thetis.html#thetis.solver2d.FlowSolver2d.add_new_field">add_new_field() (thetis.solver2d.FlowSolver2d method)</a>
+</li>
       <li><a href="thetis.html#thetis.equation.Equation.add_term">add_term() (thetis.equation.Equation method)</a>
 </li>
+      <li><a href="thetis.html#thetis.conservative_tracer_eq_2d.ConservativeTracerEquation2D.add_terms">add_terms() (thetis.conservative_tracer_eq_2d.ConservativeTracerEquation2D method)</a>
+
+      <ul>
+        <li><a href="thetis.html#thetis.tracer_eq_2d.TracerEquation2D.add_terms">(thetis.tracer_eq_2d.TracerEquation2D method)</a>
+</li>
+      </ul></li>
+      <li><a href="thetis.html#thetis.options.ModelOptions2d.add_tracer_2d">add_tracer_2d() (thetis.options.ModelOptions2d method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.coupled_timeintegrator.CoupledLeapFrogAM3.advance">advance() (thetis.coupled_timeintegrator.CoupledLeapFrogAM3 method)</a>
 
       <ul>
@@ -179,8 +191,6 @@
         <li><a href="thetis.html#thetis.timeintegrator.TimeIntegratorBase.advance">(thetis.timeintegrator.TimeIntegratorBase method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.utility.ALEMeshUpdater">ALEMeshUpdater (class in thetis.utility)</a>
 </li>
       <li><a href="thetis.html#thetis.options.LinearEquationOfStateOptions.alpha">alpha (thetis.options.LinearEquationOfStateOptions attribute)</a>
@@ -663,11 +673,19 @@
 </li>
       <li><a href="thetis.html#thetis.forcing.compute_wind_stress">compute_wind_stress() (in module thetis.forcing)</a>
 </li>
+      <li><a href="thetis.html#thetis.conservative_tracer_eq_2d.ConservativeHorizontalAdvectionTerm">ConservativeHorizontalAdvectionTerm (class in thetis.conservative_tracer_eq_2d)</a>
+</li>
+      <li><a href="thetis.html#thetis.conservative_tracer_eq_2d.ConservativeHorizontalDiffusionTerm">ConservativeHorizontalDiffusionTerm (class in thetis.conservative_tracer_eq_2d)</a>
+</li>
       <li><a href="thetis.html#thetis.sediment_eq_2d.ConservativeSedimentAdvectionTerm">ConservativeSedimentAdvectionTerm (class in thetis.sediment_eq_2d)</a>
+</li>
+      <li><a href="thetis.html#thetis.conservative_tracer_eq_2d.ConservativeSourceTerm">ConservativeSourceTerm (class in thetis.conservative_tracer_eq_2d)</a>
 </li>
       <li><a href="thetis.html#thetis.conservative_tracer_eq_2d.ConservativeTracerEquation2D">ConservativeTracerEquation2D (class in thetis.conservative_tracer_eq_2d)</a>
 </li>
       <li><a href="thetis.html#thetis.callback.ConservativeTracerMassConservation2DCallback">ConservativeTracerMassConservation2DCallback (class in thetis.callback)</a>
+</li>
+      <li><a href="thetis.html#thetis.conservative_tracer_eq_2d.ConservativeTracerTerm">ConservativeTracerTerm (class in thetis.conservative_tracer_eq_2d)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions3d.constant_salinity">constant_salinity (thetis.options.ModelOptions3d attribute)</a>
 </li>
@@ -1942,9 +1960,13 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="thetis.html#thetis.equation.Equation.residual">residual() (thetis.equation.Equation method)</a>
+      <li><a href="thetis.html#thetis.conservative_tracer_eq_2d.ConservativeHorizontalAdvectionTerm.residual">residual() (thetis.conservative_tracer_eq_2d.ConservativeHorizontalAdvectionTerm method)</a>
 
       <ul>
+        <li><a href="thetis.html#thetis.conservative_tracer_eq_2d.ConservativeSourceTerm.residual">(thetis.conservative_tracer_eq_2d.ConservativeSourceTerm method)</a>
+</li>
+        <li><a href="thetis.html#thetis.equation.Equation.residual">(thetis.equation.Equation method)</a>
+</li>
         <li><a href="thetis.html#thetis.equation.Term.residual">(thetis.equation.Term method)</a>
 </li>
         <li><a href="thetis.html#thetis.exner_eq.ExnerBedloadTerm.residual">(thetis.exner_eq.ExnerBedloadTerm method)</a>
