--- a/_modules/thetis/sediment_eq_2d.html
+++ b/_modules/thetis/sediment_eq_2d.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thetis.sediment_eq_2d &#8212; Thetis 0+untagged.1675.g2c5c7fa documentation</title>
+    <title>thetis.sediment_eq_2d &#8212; Thetis 0+untagged.1676.g1d09a98 documentation</title>
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -162,7 +162,7 @@
 
 <div class="viewcode-block" id="SedimentEquation2D"><a class="viewcode-back" href="../../thetis.html#thetis.sediment_eq_2d.SedimentEquation2D">[docs]</a><span class="k">class</span> <span class="nc">SedimentEquation2D</span><span class="p">(</span><span class="n">Equation</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    2D sediment advection-diffusion equation: :eq:`tracer_eq_2d` or :eq:`conservative_tracer_eq_2d`</span>
+<span class="sd">    2D sediment advection-diffusion equation: :eq:`tracer_eq_2d` or :eq:`cons_tracer_eq_2d`</span>
 <span class="sd">    with sediment source and sink term</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">,</span> <span class="n">depth</span><span class="p">,</span> <span class="n">options</span><span class="p">,</span> <span class="n">sediment_model</span><span class="p">,</span> <span class="n">conservative</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
