add Bateman et al. (2021) paper

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Overview: module code &#8212; Thetis 0+untagged.1676.g1d09a98 documentation</title>
+    <title>Overview: module code &#8212; Thetis 0+untagged.1689.ge390b9e documentation</title>
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="../_static/thetis.css" type="text/css" />
     <script id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
@@ -84,6 +84,7 @@
 <li><a href="thetis/turbines.html">thetis.turbines</a></li>
 <li><a href="thetis/turbulence.html">thetis.turbulence</a></li>
 <li><a href="thetis/utility.html">thetis.utility</a></li>
+<li><a href="thetis/utility3d.html">thetis.utility3d</a></li>
 </ul>
 
             <div class="clearer"></div>
